fixed vertical size of status pane
Invisible elements for the status pane messages where
previously taken into account for the pane size calcalation.
This commit fixes the sizes and avoids that vertical
sliders pop up in full screen mode.

--- a/resources/public/css/status.css
+++ b/resources/public/css/status.css
@@ -60,3 +60,8 @@
     width:32px;
     height:32px;
 }
+
+#status-pane #status-messages {
+    position:absolute;
+    opacity:0;
+}
